--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -6,3 +6,11 @@ body {
 a {
   color: #00B7FF;
 }
+#btnloadBooks
+{
+  padding: 20px 100px 20px 100px;
+  margin: 40px;
+  background: goldenrod;
+  align-content: center;
+
+}
